--- a/index.html
+++ b/index.html
@@ -2,25 +2,24 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - To-do list</title>
+  <title>To Do List - Arjav Lamsal</title>
   <link rel="stylesheet" href="./style.css">
+  <script src="https://kit.fontawesome.com/b4db02e187.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+</head>
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<head>
-	<script src="https://kit.fontawesome.com/b4db02e187.js" crossorigin="anonymous"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
 
-<div class="container">
+<div class="add-task-container">
 	<div class="todo-app">
 		<h1><i class="fa-regular fa-pen-to-square"></i>To-do List:</h1>
 		<div class="row">
-			<input type="text" id="input-box" placeholder="Add a new task">
-			<button onclick="addTask()">Add</button>
+            <input type="text" maxlength="12" id="taskText" placeholder="Add a new task." onkeydown="if (event.keyCode == 13) document.getElementById('add').click()">
+	        <button id="add" class="button add-button" onclick="addTask()">Add</button>
 		</div>
 		<ul id="list-container">
 			<!-- 			<li class="checked">Task 1</li>
@@ -28,7 +27,156 @@
 		</ul>
 	</div>
 </div>
+<div class="main-container">
+	<ul class="columns">
+
+		<li class="column to-do-column">
+			<div class="column-header">
+				<h4>🌟 To Do</h4>
+			</div>
+			<ul class="task-list" id="to-do">
+				<li class="task">
+					<p>Exercise</p>
+				</li>
+				<li class="task">
+					<p>Cook</p>
+				</li>
+				<li class="task">
+					<p>Clean</p>
+				</li>
+				<li class="task">
+					<p>Read</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column doing-column">
+			<div class="column-header">
+				<h4>💫 Doing</h4>
+			</div>
+			<ul class="task-list" id="doing">
+				<li class="task">
+					<p>Meditation</p>
+				</li>
+				<li class="task">
+					<p>Work</p>
+				</li>
+				<li class="task">
+					<p>Gardening</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column done-column">
+			<div class="column-header">
+				<h4>🏆 Done</h4>
+			</div>
+			<ul class="task-list" id="done">
+				<li class="task">
+					<p>Yoga</p>
+				</li>
+				<li class="task">
+					<p>Shopping</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column trash-column">
+			<div class="column-header">
+				<h4>❌ Trash</h4>
+			</div>
+			<ul class="task-list" id="trash">
+				<li class="task">
+					<p>Emails</p>
+				</li>
+				<li class="task">
+					<p>TV</p>
+				</li>
+			</ul>
+			<div class="column-button">
+				<button class="button delete-button" onclick="emptyTrash()">Delete</button>
+			</div>
+		</li>
+
+	</ul>
+</div>
 <!-- partial -->
+
+<div class="main-container"></div>
+	<ul class="columns">
+
+		<li class="column to-do-column">
+			<div class="column-header">
+				<h4>🌟 To Do</h4>
+			</div>
+			<ul class="task-list" id="to-do">
+				<li class="task">
+					<p>Exercise</p>
+				</li>
+				<li class="task">
+					<p>Cook</p>
+				</li>
+				<li class="task">
+					<p>Clean</p>
+				</li>
+				<li class="task">
+					<p>Read</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column doing-column">
+			<div class="column-header">
+				<h4>💫 Doing</h4>
+			</div>
+			<ul class="task-list" id="doing">
+				<li class="task">
+					<p>Meditation</p>
+				</li>
+				<li class="task">
+					<p>Work</p>
+				</li>
+				<li class="task">
+					<p>Gardening</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column done-column">
+			<div class="column-header">
+				<h4>🏆 Done</h4>
+			</div>
+			<ul class="task-list" id="done">
+				<li class="task">
+					<p>Yoga</p>
+				</li>
+				<li class="task">
+					<p>Shopping</p>
+				</li>
+			</ul>
+		</li>
+
+		<li class="column trash-column">
+			<div class="column-header">
+				<h4>❌ Trash</h4>
+			</div>
+			<ul class="task-list" id="trash">
+				<li class="task">
+					<p>Emails</p>
+				</li>
+				<li class="task">
+					<p>TV</p>
+				</li>
+			</ul>
+			<div class="column-button">
+				<button class="button delete-button" onclick="emptyTrash()">Delete</button>
+			</div>
+		</li>
+
+	</ul>
+</div>
+
+
   <script  src="./script.js"></script>
 
 </body>
