UI COMPONENTS DONE

--- a/index.html
+++ b/index.html
@@ -18,13 +18,9 @@
 	<div class="todo-app">
 		<h1><i class="fa-regular fa-pen-to-square"></i>To-do List:</h1>
 		<div class="row">
-            <input type="text" maxlength="12" id="taskText" placeholder="Add a new task." onkeydown="if (event.keyCode == 13) document.getElementById('add').click()">
+            <input type="text" maxlength="12" id="textbox" placeholder="Add a new task." onkeydown="if (event.keyCode == 13) document.getElementById('add').click()">
 	        <button id="add" class="button add-button" onclick="addTask()">Add</button>
 		</div>
-		<ul id="list-container">
-			<!-- 			<li class="checked">Task 1</li>
-			<li>Task 2</li> -->
-		</ul>
 	</div>
 </div>
 <div class="main-container">
@@ -101,81 +97,6 @@
 	</ul>
 </div>
 <!-- partial -->
-
-<div class="main-container"></div>
-	<ul class="columns">
-
-		<li class="column to-do-column">
-			<div class="column-header">
-				<h4>🌟 To Do</h4>
-			</div>
-			<ul class="task-list" id="to-do">
-				<li class="task">
-					<p>Exercise</p>
-				</li>
-				<li class="task">
-					<p>Cook</p>
-				</li>
-				<li class="task">
-					<p>Clean</p>
-				</li>
-				<li class="task">
-					<p>Read</p>
-				</li>
-			</ul>
-		</li>
-
-		<li class="column doing-column">
-			<div class="column-header">
-				<h4>💫 Doing</h4>
-			</div>
-			<ul class="task-list" id="doing">
-				<li class="task">
-					<p>Meditation</p>
-				</li>
-				<li class="task">
-					<p>Work</p>
-				</li>
-				<li class="task">
-					<p>Gardening</p>
-				</li>
-			</ul>
-		</li>
-
-		<li class="column done-column">
-			<div class="column-header">
-				<h4>🏆 Done</h4>
-			</div>
-			<ul class="task-list" id="done">
-				<li class="task">
-					<p>Yoga</p>
-				</li>
-				<li class="task">
-					<p>Shopping</p>
-				</li>
-			</ul>
-		</li>
-
-		<li class="column trash-column">
-			<div class="column-header">
-				<h4>❌ Trash</h4>
-			</div>
-			<ul class="task-list" id="trash">
-				<li class="task">
-					<p>Emails</p>
-				</li>
-				<li class="task">
-					<p>TV</p>
-				</li>
-			</ul>
-			<div class="column-button">
-				<button class="button delete-button" onclick="emptyTrash()">Delete</button>
-			</div>
-		</li>
-
-	</ul>
-</div>
-
 
   <script  src="./script.js"></script>
 
