--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
 				<li class="task">
 					<p>TV</p>
 				</li>
+				<li class="task">
+					<p>Play</p>
+				</li>
 			</ul>
 			<div class="column-button">
 				<button class="button delete-button" onclick="emptyTrash()">Delete</button>
@@ -98,7 +101,7 @@
 </div>
 <!-- partial -->
 
-  <script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.js'></script><script  src="./script.js"></script>
 
 </body>
 </html>
